# flashcardmx

./: Cargo.toml  endings.csv  notes.txt
src/: main.rs
templates/: index.html  layout.html
